Fix dark mode popover.

--- a/client/web/src/search/notebook/fileBlock/SearchNotebookFileBlockInput.module.scss
+++ b/client/web/src/search/notebook/fileBlock/SearchNotebookFileBlockInput.module.scss
@@ -18,3 +18,7 @@
         background-color: var(--body-bg);
     }
 }
+
+.suggestions-popover {
+    background-color: var(--input-bg);
+}
